--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,12 @@ build/
 app/build/
 *.iml
 
-# Exclude binary wrapper JAR in this repo context
-gradle/wrapper/gradle-wrapper.jar
 
 # Signing files and credentials
 *.jks
 *.keystore
 keystore.properties
 keystore/
+**/build/
+*.apk
+*.aab
