--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,32 +1,37 @@
-name: Android CI
-
 on:
-  push:
   pull_request:
+  push:
+    branches: [ "main" ]
 
 jobs:
-  build:
+  pr-fast:
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-
-      - name: Set up JDK
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: temurin
           java-version: 17
-
-      - name: Set up Android SDK
-        uses: android-actions/setup-android@v3
-
-      - name: Gradle cache
-        uses: gradle/actions/setup-gradle@v3
-
+      - uses: android-actions/setup-android@v3
+      - uses: gradle/actions/setup-gradle@v3
       - name: Unit tests
         run: ./gradlew :app:testDebugUnitTest
-
       - name: Assemble debug
         run: ./gradlew :app:assembleDebug
 
+  main-release:
+    if: github.ref == 'refs/heads/main'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: 17
+      - uses: android-actions/setup-android@v3
+      - uses: gradle/actions/setup-gradle@v3
+      - name: Unit tests
+        run: ./gradlew :app:testDebugUnitTest
       - name: Bundle release
         run: ./gradlew :app:bundleRelease
