--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,7 +1,10 @@
+name: Android CI
+
 on:
   pull_request:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
   pr-fast:
@@ -12,7 +15,7 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 17
+          java-version: '17'
       - uses: android-actions/setup-android@v3
       - uses: gradle/actions/setup-gradle@v3
       - name: Unit tests
@@ -28,7 +31,7 @@ jobs:
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
-          java-version: 17
+          java-version: '17'
       - uses: android-actions/setup-android@v3
       - uses: gradle/actions/setup-gradle@v3
       - name: Unit tests
